// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WishListItem > displaying the list item > when the list item is editable > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_8f9b4a"
        style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
      >
        <div
          aria-controls="wishListItem2Details"
          aria-expanded="false"
          class="_trigger_8f9b4a"
        >
          <span
            class="_descriptionContainer_8f9b4a _descriptionContainerEditable_8f9b4a"
          >
            <span
              class="_editIcons_8f9b4a"
            >
              <button
                class="_icon_8f9b4a"
                data-testid="destroyWishListItem2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark _fa_8f9b4a"
                  data-icon="xmark"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 384 512"
                >
                  <path
                    d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <button
                class="_icon_8f9b4a"
                data-testid="editWishListItem2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pen-to-square _fa_8f9b4a"
                  data-icon="pen-to-square"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </span>
            <h3
              class="_description_8f9b4a"
            >
              Silver Necklace
            </h3>
          </span>
          <span
            class="_quantityEditable_8f9b4a"
          >
            <button
              class="_icon_8f9b4a"
              data-testid="incrementWishListItem2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up _fa_8f9b4a"
                data-icon="chevron-up"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M201.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 173.3 54.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <span
              class="_quantityContent_8f9b4a"
            >
              2
            </span>
            <button
              class="_icon_8f9b4a"
              data-testid="decrementWishListItem2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-down _fa_8f9b4a"
                data-icon="chevron-down"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero "
          id="wishListItem2Details"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          >
            <div
              class="_details_8f9b4a"
            >
              <h4
                class="_label_8f9b4a"
              >
                Unit Weight:
              </h4>
              <p
                class="_value_8f9b4a"
              >
                0.3
              </p>
              <h4
                class="_label_8f9b4a"
              >
                Notes:
              </h4>
              <p
                class="_value_8f9b4a"
              >
                To enchant
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_8f9b4a"
      style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
    >
      <div
        aria-controls="wishListItem2Details"
        aria-expanded="false"
        class="_trigger_8f9b4a"
      >
        <span
          class="_descriptionContainer_8f9b4a _descriptionContainerEditable_8f9b4a"
        >
          <span
            class="_editIcons_8f9b4a"
          >
            <button
              class="_icon_8f9b4a"
              data-testid="destroyWishListItem2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark _fa_8f9b4a"
                data-icon="xmark"
                data-prefix="fas"
                role="img"
                viewBox="0 0 384 512"
              >
                <path
                  d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <button
              class="_icon_8f9b4a"
              data-testid="editWishListItem2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-pen-to-square _fa_8f9b4a"
                data-icon="pen-to-square"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </span>
          <h3
            class="_description_8f9b4a"
          >
            Silver Necklace
          </h3>
        </span>
        <span
          class="_quantityEditable_8f9b4a"
        >
          <button
            class="_icon_8f9b4a"
            data-testid="incrementWishListItem2"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up _fa_8f9b4a"
              data-icon="chevron-up"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 173.3 54.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"
                fill="currentColor"
              />
            </svg>
          </button>
          <span
            class="_quantityContent_8f9b4a"
          >
            2
          </span>
          <button
            class="_icon_8f9b4a"
            data-testid="decrementWishListItem2"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down _fa_8f9b4a"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero "
        id="wishListItem2Details"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        >
          <div
            class="_details_8f9b4a"
          >
            <h4
              class="_label_8f9b4a"
            >
              Unit Weight:
            </h4>
            <p
              class="_value_8f9b4a"
            >
              0.3
            </p>
            <h4
              class="_label_8f9b4a"
            >
              Notes:
            </h4>
            <p
              class="_value_8f9b4a"
            >
              To enchant
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WishListItem > displaying the list item > when the list item is not editable > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_8f9b4a"
        style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
      >
        <div
          aria-controls="wishListItem2Details"
          aria-expanded="false"
          class="_trigger_8f9b4a"
        >
          <span
            class="_descriptionContainer_8f9b4a"
          >
            <h3
              class="_description_8f9b4a"
            >
              Silver Necklace
            </h3>
          </span>
          <span
            class="_quantity_8f9b4a"
          >
            <span
              class="_quantityContent_8f9b4a"
            >
              2
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero "
          id="wishListItem2Details"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          >
            <div
              class="_details_8f9b4a"
            >
              <h4
                class="_label_8f9b4a"
              >
                Unit Weight:
              </h4>
              <p
                class="_value_8f9b4a"
              >
                0.3
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_8f9b4a"
      style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
    >
      <div
        aria-controls="wishListItem2Details"
        aria-expanded="false"
        class="_trigger_8f9b4a"
      >
        <span
          class="_descriptionContainer_8f9b4a"
        >
          <h3
            class="_description_8f9b4a"
          >
            Silver Necklace
          </h3>
        </span>
        <span
          class="_quantity_8f9b4a"
        >
          <span
            class="_quantityContent_8f9b4a"
          >
            2
          </span>
        </span>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero "
        id="wishListItem2Details"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        >
          <div
            class="_details_8f9b4a"
          >
            <h4
              class="_label_8f9b4a"
            >
              Unit Weight:
            </h4>
            <p
              class="_value_8f9b4a"
            >
              0.3
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
